--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,6 @@
 fastapi==0.109.0
 uvicorn[standard]==0.27.0
 sqlalchemy==2.0.25
-pydantic[email]==2.5.3
+pydantic[email]==2.7.0
+pydantic-core==2.18.1
 python-multipart==0.0.6
